refactor: Deduplicate code, improve thread safety, and harden input validation
- Consolidate getCurrentActivity(), getVisibleRootViews(), getUniqueDrawingId()
  into canonical locations (WindowRootDiscovery, ViewPropertyExtractor)
- Fix thread safety: volatile statics, synchronized iteration/removeIf on
  synchronizedLists, atomic addIfAbsent, bounded thread pool (max 16)
- Harden InspectorServer: max body size (10MB), HTTP method validation (405),
  URL-decode query params, snapshot WindowManagerGlobal views to avoid CME
- Use StandardCharsets.UTF_8 consistently, remove debug logging

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>